--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
         <div class="article">
           <h2><span>About to</span> Company Name</h2>
           <div class="clr"></div>
-          <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</strong></p>
-          <p>Curabitur purus mi, pharetra vitae viverra et, mattis sit amet nunc. Quisque enim ipsum, convallis sit amet molestie in, placerat vel urna. Praesent congue auctor elit, nec pretium ipsum volutpat vitae. Vivamus eget ipsum sit amet ipsum tincidunt fermentum. Sed hendrerit neque ac erat condimentum vulputate. Nulla velit massa, dictum etinterdum quis, tempus at velit.</p>
+          <p><strong>STRONG.</strong></p>
+          <p>.</p>
         </div>
         <div class="article">
           <h2><span>Our</span> Mission</h2>
