--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <div class="clr"></div>
           <div class="img"><img src="images/img1.jpg" width="638" height="192" alt="" class="fl" /></div>
           <div class="post_content">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. <a href="#">Suspendisse bibendum. Cras id urna.</a> Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo.</p>
-            <p><strong>Aenean consequat porttitor adipiscing. Nam pellentesque justo ut tortor congue lobortis. Donec venenatis sagittis fringilla.</strong> Etiam nec libero magna, et dictum velit. Proin mauris mauris, mattis eu elementum eget, commodo in nulla. Mauris posuere venenatis pretium. Maecenas a dui sed lorem aliquam dictum. Nunc urna leo, imperdiet eu bibendum ac, pretium ac massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Quisque condimentum luctus ullamcorper.</p>
+            <p</p>
+            <p><strong>strong</p>
             <p class="spec"><a href="#" class="rm">Read more</a></p>
           </div>
           <div class="clr"></div>
@@ -84,9 +84,9 @@
   </div>
   <div class="fbg">
     <div class="fbg_resize">
-      <div class="col c1">
+<!--       <div class="col c1">
         <h2><span>Image</span> Gallery</h2>
-        <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
+        <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
       <div class="col c2">
         <h2><span>Services</span> Overview</h2>
         <p>Curabitur sed urna id nunc pulvinar semper. Nunc sit amet tortor sit amet lacus sagittis posuere cursus vitae nunc.Etiam venenatis, turpis at eleifend porta, nisl nulla bibendum justo.</p>
@@ -95,15 +95,14 @@
           <li><a href="#">Excepteur officia deserunt.</a></li>
           <li><a href="#">Integer tellus ipsum tempor sed.</a></li>
         </ul>
-      </div>
-      <div class="col c3">
-        <h2><span>Contact</span> Us</h2>
-        <p>Nullam quam lorem, tristique non vestibulum nec, consectetur in risus. Aliquam a quam vel leo gravida gravida eu porttitor dui.</p>
-        <p class="contact_info"> <span>Address:</span> 1458 TemplateAccess, USA<br />
-          <span>Telephone:</span> +123-1234-5678<br />
-          <span>FAX:</span> +458-4578<br />
-          <span>Others:</span> +301 - 0125 - 01258<br />
-          <span>E-mail:</span> <a href="#">mail@yoursitename.com</a> </p>
+      </div> -->
+      <div class="col c2">
+        <h2><span>Contact</span> </h2>
+        <p>.</p>
+        <p class="contact_info"> <span>Github:</span> <a href="url">https://github.com/felixcheng</a><br />
+          <span>LinkedIn:</span> <a href="url">www.linkedin.com/in/felixyscheng</a><br />
+
+          <span>E-mail:</span> <a href="#">chengfelix@gmail.com</a> </p>
       </div>
       <div class="clr"></div>
     </div>
