delete obsolete files

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 </div>
 
               <p>Such service is easy to write and handy to use. Besides keeping your rootscope clean, another benefit is this information can be directly available to your other services, which cannot inject with $scope.</p>
-</p>
-            <p class="spec"><a href="#" class="rm">Read more</a></p>
+              </p>
+      <!--       <p class="spec"><a href="#" class="rm">Read more</a></p> -->
           </div>
           <div class="clr"></div>
         </div>
