--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
       <div class="sidebar">
         <div class="gadget">
-          <h2 class="star"><span>Sidebar</span> Menu</h2>
+          <h2 class="star"><span>Nav</span> Bar</h2>
           <div class="clr"></div>
           <ul class="sb_menu">
             <li><a href="#">About Me</a></li>
@@ -129,21 +129,9 @@
   </div>
   <div class="fbg">
     <div class="fbg_resize">
-<!--       <div class="col c1">
-        <h2><span>Image</span> Gallery</h2>
-        <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
-      <div class="col c2">
-        <h2><span>Services</span> Overview</h2>
-        <p>Curabitur sed urna id nunc pulvinar semper. Nunc sit amet tortor sit amet lacus sagittis posuere cursus vitae nunc.Etiam venenatis, turpis at eleifend porta, nisl nulla bibendum justo.</p>
-        <ul class="fbg_ul">
-          <li><a href="#">Lorem ipsum dolor labore et dolore.</a></li>
-          <li><a href="#">Excepteur officia deserunt.</a></li>
-          <li><a href="#">Integer tellus ipsum tempor sed.</a></li>
-        </ul>
-      </div> -->
+
       <div class="col c2">
         <h2><span>Contact</span> </h2>
-        <p>.</p>
         <p class="contact_info"> <span>Github: </span> <a class="links" href="url"> https://github.com/felixcheng</a><br />
           <span>LinkedIn: </span> <a class="links" href="url"> www.linkedin.com/in/felixyscheng</a><br />
 
